# dice_detector

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
annotator-ui/: README.md  index.html  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
annotator-ui/src/: App.tsx  api.ts  diceColors.ts  index.css  types.ts
annotator-ui/src/components/: AnnotationPanel.tsx  AnnotatorCanvas.tsx  BBoxList.tsx  BatchAnnotatePanel.tsx  CameraCapture.tsx  CropModal.tsx  ImageNavigator.tsx  StatsTracker.tsx  Toolbar.tsx
data/: presets.json
foundry_module/: module.json
foundry_module/scripts/: main.js
foundry_module/styles/: dice-detector.css
notebooks/kaggle/: kaggle_train.ipynb
notebooks/kaggle/v3/: kaggle_train.ipynb
rpg-dice-set/xcf's/: dice_tray.xcf  dices10_Emissive.xcf  dices10_Metallic.xcf  dices10_Roughness.xcf  dices11_Emissive.xcf  dices11_Roughness.xcf  dices12_Emissive.xcf  dices12_Metallic.xcf  dices12_Roughness.xcf  dices1_Emissive.xcf  dices1_Metallic.xcf  dices1_Roughness.xcf  dices3_Emissive.xcf  dices3_Metallic.xcf  dices3_Roughness.xcf  dices4_Emissive.xcf  dices4_Metallic.xcf  dices6_Emissive.xcf  dices6_Roughness.xcf  dices8_Emissive.xcf  dices8_Metallic.xcf
scripts/: migrate_annotations.py
src/dice_detector/: main.py
src/dice_detector/api/: routes.py  server.py  state.py
src/dice_detector/camera/: __init__.py  capture.py
src/dice_detector/foundry/: __init__.py  client.py  formatter.py  server.py
src/dice_detector/models/: __init__.py  config.py  dice.py  ml.py  modifiers.py  roll.py
src/dice_detector/roll_engine/: __init__.py  calculator.py  presets.py
src/dice_detector/training/: __init__.py  annotator.py  annotator_api.py  annotator_gui.py  dataset.py  multi_output_dataset.py  multi_output_trainer.py  synthetic_generator.py  train.py
src/dice_detector/ui/: __init__.py  main_window.py  widgets.py
src/dice_detector/vision/: __init__.py  detector.py  multi_output_pipeline.py  pipeline.py  recognizer.py
synthetic/: check_gaps.py  convert_annotations.py  generate.py
synthetic/blender/configs/: default_blender_generation.json
synthetic/blender/scripts/: generate_dataset.py
synthetic/blender/scripts/dice_generator/: __init__.py  bbox.py  camera.py  config.py  generator.py  parsers.py  physics.py  scene.py
training/: models.py
training/config/: settings.py
training/training/: annotator.py  dataset.py  train.py
training/ui/: main_window.py  widgets.py
training/vision/: detector.py  recognizer.py
