[project]
name = "dice-detector"
version = "1.0.0"
description = "IRL D&D dice detection with Foundry VTT integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "pillow>=10.0.0",
    "ultralytics>=8.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "easyocr>=1.7.0",
    "customtkinter>=5.2.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
amd = [
    "torch==2.5.1",
    "pytorch-triton-rocm==3.1.0",
]
nvidia = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
dice-detector = "dice_detector.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dice_detector"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
conflicts = [
    [{ extra = "nvidia" }, { extra = "amd" }],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm62", extra = "amd" },
    { index = "pytorch-cu124", extra = "nvidia" },
]
pytorch-triton-rocm = { index = "pytorch-rocm62", extra = "amd" }
torchvision = { index = "pytorch-cu124", extra = "nvidia" }

[[tool.uv.index]]
name = "pytorch-rocm62"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
